set out structure

--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -75,21 +75,42 @@ title: 5. Findings - Design Narrative
 This chapter presents a design narrative that traces the evolution of the learning environment developed in this research across different phases of implementation. The narrative approach adopted here is informed by design-based research (DBR) traditions and the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. This
 chapter demonstrate how changes in tools, documentation, and pedagogical strategies were shaped by participant need during phases 1 to 3 of the research [foot - as explained in Ch.4].
 
-Design narratives are a useful DBR technique for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants.
+Design narratives are a useful DBR technique for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants. While Hoadley [-@hoadley_creating_2002] covers motivations of design narratives, there are not set forms. My design narrative, is an additive blend of contextual information, facilitator reflections, justifications of design changes and interwoven vignettes drawn from close observations of video data. By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological project of the thesis: to develop a participatory, tool-mediated environment informed by a synthesis of CHAT and DBR processes. The narrative also begins the task of articulating the emerging design heuristics.
 
-The chapter begins with  It continues with a situated vignette that introduces the activity and its participants, drawing attention to nested systems of activity and to a framing of use of GDPs as a germ cell / unit of analysis within AT as a theoretical framework. This is followed by three major sections, each focused on a cluster of contradictions identified during the analysis. These cover tensions related to technical tools and accessibility, issues of navigation and documentation, and cultural or identity-based challenges in the coding process. Each section presents a sequence of problem identification, design response, and analysis of outcome or change, drawing on session notes, participant feedback, artefact analysis, and observations from the researcher’s journal.
+The chapter begins with a situated vignette that introduces the activity and its participants. This is followed by three major sections, each focused on a cluster of contradictions identified during the analysis. These cover tensions related to technical tools and accessibility, issues of navigation and documentation, and cultural or identity-based challenges in the coding process. Each section presents a sequence of problem identification, design response, and analysis of outcome or change, drawing on session notes, participant feedback, artefact analysis, and observations from the researcher’s journal.
 
-While Hoadley [-@hoadley_creating_2002] covers motivations of design narratives, there are not set forms. My design narrative, is an additive blend of contextual information, facilitator reflections, justifications of design changes and interwoven vignettes drawn from close observations of video data. By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological project of the thesis: to develop a participatory, tool-mediated environment informed by a synthesis of CHAT and DBR processes. The narrative also begins the task of articulating the emerging design heuristics.
+
 
 <!-- COULD ADD IN - MY FACILITATOR INPUT IS acknowledgeD - BUT I AM NOT PERFECT - IT'S A STARTING PROCESS - CALL BACK LIMIATIONS IN CH. 4.  -->
 
-## Locating the game making activity
+## Vignette locating the game making activity
 
 <!-- EXPLAIN WHY GOING BACKWARDS - IE STARTING AT THE END. -->
 
-To open this chapter, I present a summary of Vignette 1. The purpose is to ground the reader in the evolving design through a demonstration of indicative activity from the perspective of a young participant in the process.
+To open this chapter, I present a summary of Vignette 1. The purpose is to ground the reader in the evolving design through a demonstration of indicative activity from the perspective of a young participant in the process. This scene offers a humanising and situated entry point to a detailed exploration of the wider project. The fuller vignette showing how learner motivation, intergenerational collaboration, and playful tool use unfolded in context, is included the special appendix chapter containing vignettes of activity (see Vignette 1)[^appv]. These themes are developed in later sections.
 
-This scene offers a humanising and situated entry point to a detailed exploration of the wider project. The fuller vignette showing how learner motivation, intergenerational collaboration, and playful tool use unfolded in context, is included the special appendix chapter containing vignettes of activity (see Vignette 1)[^appv]. These themes are developed in later sections. The vignette takes place at the start of the session in the latter stages of Phase 2 (P2), shortly after I had made a brief opening announcement, reminding participants' that it was the last coding session before the showcase event [^1].
+As the phases of design and tools used are referred to frequently in this chapter Table 5.x is included as a summary [^pp].
+
+
+<!-- ![](./Pictures/phases_diagram_chevrons_3.png){width=98%}
+Figure. 5.x Reminder of delivery phases and development periods - DO SIMPLIFIED IMAGE -->
+<!-- - P1 - Disparate non-code tools, Thimble (code playground).
+- P2 -  Glitch.com (code playground), Phaser.js (JavaScript game framework), Piskel (online pixel art editor).
+- P3 - As per P2 & additional side-missions
+- P4 & 5 - Makecode Arcade -->
+
+| Phase     | Brief description     |
+|-----------|-----------------------------------------------------------------------------|
+| P1        | Exploratory process: with varied non-code tools use, and code playground use as a main coding environment, minimal supporting resources.    |
+| P2        | Glitch.com (code playground), Phaser.js (JavaScript game framework), Piskel (online pixel art editor) |
+| P3        | This phase used a similar approach to P2, the core toolset was unchanged, additional social missions and a drama narrative was added to the widre process.   |
+| P4 & P5   | These phases marke a transition to a block coding approach using MakeCode Arcade tool. Supported resources were developed integrated with computing curricular concepts. |
+
+
+Table. 5.x Reminder of delivery phases and development periods
+
+
+The vignette takes place at the start of the session in the latter stages of Phase 2 (P2), shortly after I had made a brief opening announcement, reminding participants' that it was the last coding session before the showcase event [^1].
 
 <!-- Only a short summary is included below due to space limitations, but readers are encouraged to consult the full vignette in Vignette 1 for a richer account of the episode. -->
 
@@ -105,9 +126,9 @@ Table 5.1 - A shorter extract of Vignette 1 focusing on an overview of the use o
 
     Toby tests his game by playing through the many different levels of his game showing fluidity and skill. At times during playtesting, Toby undertakes a process of changing the game code to later his level layout. Toby finishes playtesting and navigates to a web page containing a menu of gameplay design pattern to add to his game he clicks on the entry for adding a moving enemy. He undertakes a careful process of exploring, copying and pasting code from an exemplar document into the correct locations. The resulting change to his game is shown in Figure 5.x. The process required Toby to use and navigate multiple tools [^2], which he undertook  in a self-directed way, occasionally rapidly and fluently, and at times in a more hesitant manner. The immediate audience of his peers appear to influence his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design. He makes a comment to a peer while self-playtesting his game  "I’m just going to have one go of beating this (his own game). It’s 21 levels in it. So Yeeeah.".  A student helper also notes his distinct level design. "Is yours the one where level one is harder than level three? ... I like that.".
 
-ADD A QUICK SUMMARY OF PROCESS. LINK TO THIS IMAGE.
+Vignette 1 has elements of activity which occur at intersecting activity systems outlined in Chapter 4. Toby activity is focused sometimes as part as a wider, community scope, and at times on an individual level to make practical changes to his game. Figure 5.x illustrates one aspect of the objective of the wider system,  working towards a game showcasing activity in the foyer of the University building where games are shared with the students in the building. This photo shows a  home made cabinet surrounding a laptop computer.
 
-![Figure.5.carrot - Final showcase activity in Brooks Building with home made cabinet surrounding a laptop computer.](./Pictures/carroteater3.jpg){width=90%}
+![Figure.5.carrot - Game showcasing event](./Pictures/carroteater3.jpg){width=90%}
 
 <!-- The sections that follow explore how such individual actions were scaffolded and how they contributed to the evolving activity system. DROP THIS? -->
 
@@ -125,27 +146,7 @@ IT FEELS LIKE THIS SECTION  -->
 
 ## Narrative exploration of key areas of contradictions emerging in the game-making learning design
 
-In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation [@engestrom_activity_1999]. Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_discursive_2011], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems. These manifestations may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and other systemic elements shaping the activity. The following sections of this chapter examine three key areas of contradiction. As the phases of design and tools used are referred to frequently in this chapter Table 5.x is included as a summary [^pp].
-
-
-<!-- ![](./Pictures/phases_diagram_chevrons_3.png){width=98%}
-
-Figure. 5.x Reminder of delivery phases and development periods - DO SIMPLIFIED IMAGE -->
-
-<!-- - P1 - Disparate non-code tools, Thimble (code playground).
-- P2 -  Glitch.com (code playground), Phaser.js (JavaScript game framework), Piskel (online pixel art editor).
-- P3 - As per P2 & additional side-missions
-- P4 & 5 - Makecode Arcade -->
-
-| Phase     | Brief description     |
-|-----------|-----------------------------------------------------------------------------|
-| P1        | Exploratory process: with varied non-code tools use, and code playground use as a main coding environment, minimal supporting resources.    |
-| P2        | Glitch.com (code playground), Phaser.js (JavaScript game framework), Piskel (online pixel art editor) |
-| P3        | This phase used a similar approach to P2, the core toolset was unchanged, additional social missions and a drama narrative was added to the widre process.   |
-| P4 & P5   | These phases marke a transition to a block coding approach using MakeCode Arcade tool. Supported resources were developed integrated with computing curricular concepts. |
-
-
-Table. 5.x Reminder of delivery phases and development periods -
+In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation [@engestrom_activity_1999]. Following Kuutti [-@kuutti_activity_1995] and Engeström [-@engestrom_discursive_2011], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems. These manifestations may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and other systemic elements shaping the activity. The following sections of this chapter examine three key areas of contradiction.
 
 The first area of contradiction addressed includes tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on a contradiction related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
 
@@ -153,9 +154,9 @@ The first area of contradiction addressed includes tensions arising from the int
 
 <!-- MOVE THE PATTERN OF HOW I WRITE ON C1-3 HERE, description, tension, response. -->
 
-In this section, I analyse journal notes, participant feedback, and the changes in the tools and resources used between P1 which was highly experimental and P2  which ended with a fuller implementation of introduced resources. The result is a composite description of key tensions in the process of game design activity.
+In this section, I analyse journal notes, participant feedback, and the changes in the tools and resources used between P1 which was highly experimental and P2  which ended with a fuller implementation of introduced resources. This section (and the subsequent two) begins with is a composite description of activity, summarises key tensions and resulting conflict and outlines the response provoked.
 
-#### Description of what happened
+<!-- #### Description of what happened -->
 
 Email communication inviting participation and describing the proposed workshop activities, set an expectation of parent being involved in "families to take part in a Game Making club to learn how to make video games together" and was revisited in the first session [^3]. In the early stages of P1, working groups formed organically, broadly along family lines, with three, mixed age groups of roughly five participants. These groups began to define their game ideas during these early relatively unstructured planning sessions. My initial focus was to create a welcoming, low-pressure environment for introducing and exploring the process of making games in a way which allowed participants to follow their own interests [^4]. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process. Each family had access to a laptop with vintage games installed and early sessions included time to play and discussing retro arcade games, describing their component parts in particular [^5b]. Other activities included: brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds [^5].
 
@@ -179,13 +180,9 @@ The  of professional text-code language and framework was a contributing factor 
 
 These tensions reveal an underlying contradiction in the activity system between the object of creating expressive, technically functioning games and the mediating means available to support that objective shown in Figure 5.x. In summary, the use of authentic text-based code environment, aggravated a misalignment between participants’ ambitions, their actual skill levels, and the support structures in place within the software toolset. At the same time, the mediational role of a single facilitator proved insufficient to sustain a good level progress within project work and to support diverse learner needs, resulting in friction and delay. This contradiction pointed to the need for redesigned tool affordances and wider scaffolding that could better support the object of creative game development.
 
-#### Design response
+Turning to the response to this conflict, one initial response  was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate. In response emailed parents for support in organising and bringing more order to group and planning processes[^14]. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
 
-The first response to this conflict was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate. In response emailed parents for support in organising and bringing more order to group and planning processes[^14]. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
-
-<!-- ### Technical description of the core toolset used for P2 and P3 -->
-
-Regarding tools, these tensions outlined above shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a _starter game template_ with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification. The process of developing the affordances of the starter game involved close consideration to the imagined first encounters with the game and underlying code. This game template was introduced by a facilitators prompted learners to play a _broken_ game in a web page. They were asked to work out in what way the game was broken and then invited to look at the code to try to _fix_ the game (e.g to make changes to progress) [^14b].
+The contradiction outlined above also shaped a series of design adaptations to tools used between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a _starter game template_ with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification. The process of developing the affordances of the starter game involved close consideration to the imagined first encounters with the game and underlying code. This game template was introduced by a facilitators prompted learners to play a _broken_ game in a web page. They were asked to work out in what way the game was broken and then invited to look at the code to try to _fix_ the game (e.g to make changes to progress) [^14b].
 
 ![Figure 5.x Simple game template - with limitation of initial jump height shown](./Pictures/simple_codeplayground_jump.png){width=95%}
 
@@ -223,18 +220,12 @@ Names in Appendix
 - Graphical asset scaffolding
  -->
 
-##### Brief Analysis
+<!-- ##### Brief Analysis -->
 
-This section now summarise and analyse some of the ways in which the design helped address the tensions described above. The in line with the exploratory rather than quantitive nature of the thesis, the aim is not to prove efficacy of the intervention rather than to explain its role in the iteration. However broad descriptions of impact are included to help situate the later sections.
+This section now summarises and analyses some of the ways in which the design helped address the tensions described above. The in line with the exploratory rather than quantitive nature of the thesis, the aim is not to prove efficacy of the intervention rather than to explain its role in the iteration. However broad descriptions of impact are included to help situate the later sections.
 
-<!-- This chapter discusses this design in relation to existing research on learning to programme through the use of supporting code templates. -->
-<!-- INCLUDE SOME INTERVIEW DATA IF USEFUL.
-IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
-A BIT MOE OF A SUMMARY.. -->
-<!-- CHECK FOR DUPLICATION & SIGNPOST -->
 
-The staring template reduced the difficultly and time needed to initiate a game project. This contributed to a significant shift in working practices from P2 onwards characterised by smaller working groups, normally pairs or individuals. In addition, the process of starting with a working game and altering existing affordances within the template allowed participants to start to share their emerging games with others immediately,
-which contributed to the concurrent increase the time spent spent undertaking peer play testing at this phase. The process of selecting a reduced toolset in P2 helped as well as address potential for participants to be overloaded by the diversity of the tools at play also created a greater alignment of participant experience. This appears to be a contributing factor to increased peer exchange of skills and knowledge.
+The staring template reduced the difficultly and time needed to initiate a game project. This contributed to a significant shift in working practices from P2 onwards characterised by smaller working groups, normally pairs or individuals. In addition, the process of starting with a working game and altering existing affordances within the template allowed participants to start to share their emerging games with others immediately, which contributed to the concurrent increase the time spent spent undertaking peer play testing at this phase. The process of selecting a reduced toolset in P2 helped as well as address potential for participants to be overloaded by the diversity of the tools at play also created a greater alignment of participant experience. This appears to be a contributing factor to increased peer exchange of skills and knowledge.
 
 The technical adaptation of the text-based level editing grid had a specific impact on the coding experience and wider environment. The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games. Vignette 1 shows Toby designing many levels of varying difficultly in a way which made the experiences of playing his game distinct from others. This individuality is noted and encouraged by a student helper (see Vignette 1 extract in the previous section).
 
@@ -274,10 +265,9 @@ After one session in P1, I emailed participants , expressing that I felt daunted
 
 #### Surfaced tensions and framed contradiction
 
-A TRANSITION.
+<!-- A TRANSITION. -->
 
-
-A recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for technical support. This was compounded by resistance to whole-class teaching input[^input], which consistently yielded low engagement, even when I had identified common issues. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [-@repenning_scalable_2015], as discussed in Chapter 2, frame this resistance as a barrier arising from a principles-first approach. The authors describe the risk of such an approach plainly as participant boredom. The challenge became how to support progress given my limited facilitator time, without losing the important pedagogical feature of participant choice over their pathway. I also struggled reconcile an additional tension between this responsive approach to providing documentation and requests from some parents asking for resources involving background concepts and explanations of coding constructs.
+A recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for technical support. This was compounded by resistance to whole-class teaching input[^input], which consistently yielded low engagement. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [-@repenning_scalable_2015], as discussed in Chapter 2, frame this resistance as a barrier arising from a principles-first approach. The authors describe the risk of such an approach plainly as participant boredom. The challenge became how to support progress given my limited facilitator time, without losing the important pedagogical feature of participant choice over their pathway. I also struggled reconcile an additional tension between this responsive approach to providing documentation and requests from some parents asking for resources involving background concepts and explanations of coding constructs.
 
 Together, these challenges surfaced a contradiction between an important component of the object of the activity (learner-led game creation) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without the input of facilitator mediation. Thus, the flexibility of the environment became problematic. This contradiction appeared to be a double bind [@engestrom_expansive_2001]; how could I provide greater support via documentation detailing implementation and a underlying principles without compromising the responsiveness to the learner pathways that was foundational to the ethos of my approach? This contradiction drove extensive revision in the learning design concerning methods of technical support.
 
@@ -297,20 +287,20 @@ _Quick start cards_ was initially developed to support one-off sessions to allow
 ![Figure 5.cards - Example of a Quick start card](./Pictures/velocity_jscard.png){width=95%}
 
 The cards supported participants' initial interaction with the code in a way that further developed the use and modify stages of the UMC framework [@franklin_analysis_2020] HOW / CALLBACK?. They allowed  participants to get started with the starting template game with less in person support from facilitators to the strongly scaffolded interaction with the code and the relatively minimal changes needed to the code. Thus, this process scaffolded simple coding tasks while also facilitating choice over learner pathways.
-SOME ON IMPACT AT LIBRARY?
 
+<!-- SOME ON IMPACT AT LIBRARY? -->
 <!-- Also aligning with low floors principle.
 VERY LIMITED ANALYSIS HERE - SIGNPOST LATER EXPLORATION?
  -->
 
+To further reduce dependence on my time as a facilitator, I wrote supporting documentation in a step by step format for each code example. In the early stages of P2, learners accessed these document through a Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa.
+
 ##### Structuring instructional tutorial resources and code snippets
-
-
-This section now addresses the introduction of code snippets and self-contained instruction based on game design patterns, and their containment within a manual with a more linear structure. While quick start cards scaffolded existing affordances within the game code, an innovative structure of documentation was needed to support adding new features.
 
 While the use of code examples or *snippets* [^23] is a common professional practice in problem-solving [@yang_stack_2017], their use by novice learners presents challenges related to relevance, consistency, and accessibility [@treude_understanding_2017].  Indeed  difficulties experienced by participants in P1 understanding and applying these  abstracted code snippets from the Phaser documentation website prompted me to create more tailored resources for P2. These bespoke, stand-alone code projects demonstrated annotated code features and within a playable game project based on the starter game template, allowing participants to copy and paste the relevant code sections needed into their project. Projects illustrated requested game features such as gameplay design patterns; including: *jumping on an enemy to zap it*, and *making a moving enemy*. To help learners situate the code within the correct structure, all projects used the core game template and included only the new code required for each feature.  
 
-To further reduce dependence on my time as a facilitator, I wrote supporting documentation in a step by step format for each code example. In the early stages of P2, learners accessed these document through a Google document with links and brief descriptions. I continued developing new projects and producing printable instructions to support these code snippets, ensuring that each snippet linked to a descriptive chapter and vice versa.
+This section now addresses the introduction of code snippets and self-contained instruction based on game design patterns, and their containment within a manual with a more linear structure. While quick start cards scaffolded existing affordances within the game code, an innovative structure of documentation was needed to support adding new features.
+
 
 To meet participants' requests for foundational coding knowledge, I created step-by-step chapter resources guiding users to code a core game template structure from first principles [^24]. While this linear format did not fully align with my choice-driven approach, I envisioned it as supplementary reinforcement for learning outside of sessions, which indeed some participants did take up [^25].
 
@@ -347,7 +337,9 @@ Chapter 2 reviewed research on using collections of gameplay design patterns to 
 
 For the documentation hub described above, I grouped game design patterns into categories based on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003; @olsson2014conceptual], as well as participants’ evolving requests for game features. Specifically, these patterns were themed in a way which aligned with the MDA (mechanics, dynamics, and aesthetics) game element framework explored in Chapter 2 [^26]. The final categorisation used in P4 is shown  in Table 5.x. It was in this stage of theming the game features that I started to explore in detail existing research of game design patterns in educational contexts.
 
-Video data collected documents the creation of games with diverse and complex styles and themes [^27]. These issues are discussed in more detail in relation to the development of participant agency in Chapter 7. Discussion on how the development of these supporting resources interacted with the core template contributes to research on Microworld environments and the UMC framework is continued in the final discussion section of this chapter.
+Video data collected documents the creation of games with diverse and complex styles and themes [^27]. These issues are discussed in more detail in relation to the development of participant agency in Chapter 7.
+
+Discussion on how the development of these supporting resources interacted with the core template contributes to research on Microworld environments and the UMC framework is continued in the final discussion section of this chapter.
 
 <!-- DUPLICAITONS WITH CH. 6
 CHANGE GRAPHIC TO A TABLE IN CH.6 - AND REVISIT IT'S PLACE IN THE OVERALL ARGUMENT.
@@ -573,8 +565,7 @@ The design approach that followed the moments of contraction outlined above  was
 
 <!-- LINK FROM HERE TO START OF CH.6 GERM CELL / SCOPE -->
 
-**Results**
-Turing to a summary of the results of the process, the use of a design narrative processes informed by DBR practice [@hoadley_creating_2002] has been employed to share not only the detail of the end results but also the emerging tensions that drove them and replicable approach. With that aim in mind the following list shares links to currently online and reusable resources [^44].
+In this chapter the use of a design narrative processes informed by DBR practice [@hoadley_creating_2002] has been employed to share not only the detail of the resulting learning design but also the emerging tensions that drove them and replicable approach. With that aim in mind the following list shares links to currently online and reusable resources [^44].
 
 - P2-3 Starting Game Template: https://codepen.io/mrmick/pen/gbaOEgB?editors=0010
 - Menu of GDPs: https://jamm-labs.github.io/ggcp/ggc-examples/
@@ -681,7 +672,7 @@ Gilbert is the worsted name.
 
 [^13]: See appendix bee for an example.
 
-[^14]: This email included in Appendix.email illustrates a pivotal moment in  my understanding of the limits of my role as facilitator of an open process and the need to impose limitation.
+[^14]: This email included in Appendix.email illustrates a pivotal moment in  my understanding of the limits of my role as facilitator of an open process and the need to impose limitation. This aspect is explored later in section C3.
 
 
 [^14b]: Participants would try to jump up to the platforms in the game but find that they could not jump high enough ot progress. Figure 5.x below shows a white square as a player, red squares are hazards to be avoided, and yellow squares are rewards which must be collected to progress to the next level. A white line is shows indicating how high the player character can jump.
@@ -789,7 +780,7 @@ For a recap of benefits see Chapter 2.
 
 [^cdiv]: In P1 there was a greater diversity in the underlying structure of the code projects as the starting template used at that stage was less developed.
 
-[^input]: In the form of facilitator-led instruction using a projection screen, powerpoint and demonstrations of code problems and solutions. Given the context of home education, resistance to this traditional teaching method was not unexpected.
+[^input]: This form of teaching input took the form of facilitator-led instruction using a projection screen, powerpoint and demonstrations of coding issues and solutions that I judged were or would be relevant to most participants.  
 
 [^bro]: At this stage I suggest the reader take one minute to browse that experience at - https://jamm-labs.github.io/ggcp/ggc-examples/
 
