--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -485,13 +485,11 @@ The structure of documentation, created in response to participant requests for 
 | Stage 3 | Adding simple GDPs to the game          | These additions to the game could be made by making minimal changes to template structure needed                           |
 | Stage 4 | Advanced GDPs             | Larger changes including adding new functions to structure of template or making more fundamental underlying changes, or implementing completely unstructured GDPs |
 
-Table 5.x - A representation of the staged processes - ADD IN MORE DETAIL
+Table 5.x - A representation of the staged processes
 
-This stepped approach which increases complexity of the objective of activity, is present explicitly only in limited CGD&P research. While the work of Repenning on SGD operationalises this staged approach concept through guiding learners to undertake projects which are progressively more complex and take on more complex patterns, it differs in that core template is provided and as such progression to the next stage involves starting from a blank slate each time [@repenning_scalable_2015]. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it [^38].
+This stepped approach outlined in the table above which increases complexity of the objective of activity, is present explicitly only in limited CGD&P research. The work of Repenning on SGD operationalises this gradation through guiding learners to undertake projects which are progressively more complex, thus implementing progressively more complex patterns. It differs, however in that no common template is provided and as such progression to the next stage involves starting from a blank slate each time [@repenning_scalable_2015]. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners once they had built familiarity with it [^38]. T
 
-<!-- COULD THE below BE IN THE TABLE ABOVE? -->
-
-This staged based approach, outlined in the table above, shares characteristics and the the benefits  outlined in research on the the broader computing pedagogy of Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] [^38b]. Stages 1 based on the playful game analysis as a precursor to game making [@gamejam]. Stage 2 and the design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way (as per the Use stage of UMC). . Stage 3 aligns with Modify, with minimal changes causing high resluting impact aligning with UMC the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. The careful scaffolding of initial coding experiences outlined above, forced early, and repeated  transitions from the _use_ to _modify_ stages, addressing the barrier of possible negative affect towards text-based coding. Stage 4 here comprises the most advanced stage of the stage based approach. This could be implementing a more complex GDP from the menu which involves adding new functions, and making more fundamental changes to the code. This decision to _choose_ (and implement) from a restricted set of options, rather than _create_ from scratch, is in line with some adaptations of the UMC model [@lytle_use_2019-1]. A further extension still would be the choice to imagine, design and implement a GDP not included in the menu provided, this is a process that Dan and Toby take on in P3 by adapting the code template to create a Pac-Man like maze game [^pm].
+The four staged-based approach in Table 6.x shares characteristics and benefits outlined in research on the the broader computing pedagogy of Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] [^38b]. Stages 1 based on the playful game analysis as a precursor to game making [@cornish_game_2018]. Stage 2 and the design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way (as per the Use stage of UMC). . Stage 3 aligns with Modify, with minimal changes causing high resulting impact aligning with UMC the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. The careful scaffolding of initial coding experiences outlined above, forced early, and repeated  transitions from the _use_ to _modify_ stages, addressing the barrier of possible negative affect towards text-based coding. Stage 4 here comprises the most advanced stage of the stage based approach. This could be implementing a more complex GDP from the menu which involves adding new functions, and making more fundamental changes to the code. This decision to _choose_ (and implement) from a restricted set of options, rather than _create_ from scratch, is in line with some adaptations of the UMC model [@lytle_use_2019-1]. A further extension still would be the choice to imagine, design and implement a GDP not included in the menu provided, this is a process that Dan and Toby take on in P3 by adapting the code template to create a Pac-Man like maze game [^pm].
 
 Given the close alignment in the structural model with UMC, the contribution to the research landscape in relation to this aspect of my thesis is in the guiding use of GDPs as a structural support to guide the development between stages. This aspect of the research is developed in Chapter 6. In addition, the research also  form of a case study supporting existing results and providing a replicable pedagogy.
 DEVELOP THIS / LINKS/
@@ -513,25 +511,33 @@ A possible drawback of using a professional tool for novice learners is the risk
 
 #### Harbour metaphor
 
-The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains [^40].  In this metaphor the Microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. This chapter has highlighted a process of input from professional communities into the Microworld vehicle of the starting template game.
+The process of supporting students and designing a bespoke template can be seen through a metaphor of a harbour. Harbours are a transitional space between the land and the sea, built to facilitate transport of goods and people between the two domains [^40].  In this metaphor the Microworld is a vehicle for exploration forming the base of the learning experience and designed to allow input from the technical community through the lens of the facilitator's design experiences. This chapter has highlighted a process of input from professional communities into the Microworld vehicle of the starting template game. In addition, affordances within the template design and additional resources are describe which facilitate participants to import their existing home interests into the new learning space.
 
-Affordances within the template design and additional resources which facilitate participants to onboard their existing home interests into the new learning space so they can feel more accommodated. (NOT CURRENTLY IN DIAGRAM)
-
-![Figure 5.x - Harbour metaphor](./Pictures/harbour_v1.png){width=95%}
+![Figure 5.x - Harbour metaphor](./Pictures/harbour_v2.png){width=95%}
 
 <!-- In addition, other learning design choices create a sheltered learning environment, shielded but not cut off from the complexity of online documentation and support. -->
 
-Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If designed, protection is offered by artificially created harbour walls extending out into the sea, creating a sheltered space [^41]. The boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. While this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies. The safe nature of the harbour encourages free exploration within the protective walls. Restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014].
+Figure 5.x shows a simplified representation of a habour (centre) with land of the left of the figure, sea on the right. Harbours are protective spaces, artificial or naturally occurring, used primarily as suitable places for docking ships. If artificial, protection is offered by created harbour walls extending out into the sea, creating a sheltered space [^41]. In this metaphor, the boundaries of the harbour walls represent the restrictive decisions in terms of the genre of end product, and simplifications in code structures used. While this design uses an authentic, professional text-coding language with its inherent challenges, many design choices were made to shield new users from the complexity of the underlying configuration of interrelated web technologies. The safe nature of the harbour encourages free exploration within the protective walls. This exploration involves interaction with peers, accessing bespoke documentation created and input from facilitators.  
 
-Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea [^42]. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024].  The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice, especially the choppy waters represented by the complexity of accessing and interpreting online documentation and support [^43].   
+Harbour walls prevent large waves from entering but also provide gaps allowing movement out into the open sea [^42]. The motivational impact of an authentic process and set of tools exists in tension with the accompanying complexity [@nachtigall_authenticity_2024].  The use of authentic tools and alignment with professional practice makes it easier for learners to transition from a supported harbour of this learning design and venture out into the open seas of less supported practice, especially the choppy waters represented by the complexity of accessing and interpreting online documentation and support [^43].  This metaphor is offered as an accessible way to represent the design attempts to resolve contradictions explored in this chapter concerning authenticity and to begin to illustrate how careful structural restrictions may produce creative potential of for agency development [@rosso_creativity_2014], a process explored in more detail in Chapter 7.
 
+<!--
+IS THIS EXPLORE ELSE WHERE - IF SO LINK FORWARDS.
+
+restrictions may be productive through the creative potential of limitations [@rosso_creativity_2014]. -->
+
+<!--
+**Signposting**
+IS THE PART ON AGENCY NEEED?
+
+At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^45]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.   -->
 
 <!-- In terms of agency and choice over learner pathway, Harbours are also safe places of play and learning. Harbours can be evocative and intriguing, inviting the possibility to travel beyond the walls to unexplored realms. -->
 
 
 ### 3M game making (Meta) model of pedagogical elements of the learning design
 
-In summer 2020 I began early dissemination of results in a peer-reviewed book [@keane_teaching_2023]. The resulting chapter [@chesterman_game_2023], presented the essence of the learning resources and design to fellow practitioners and participants as well as researchers. To do this I created the frame of a 3M pedagogical model, to present simplified represtation of  key features of the model and the motivations behind them.
+In summer 2020 I began early dissemination of results in a peer-reviewed book [@keane_teaching_2023]: the resulting chapter  presented the essence of the learning resources and design to fellow practitioners and participants as well as researchers [@chesterman_game_2023]. To do this I  framed key elements of the  process used within the research phases as a pedagogic model I called 3M (Missions, Maps and Methods). This model is shared now as a facilitator-focused summary key features of the model and the motivations behind them.
 
 ![Figure 1.3. Synthesising diagram of 3M Game Making Model](./Pictures/3msynthesis.png){ width=80% }
 
@@ -583,27 +589,20 @@ INSERT TABLE OF THE DESIGN FACTORS.
 | Congruence: Learners interested in video games are motivated to create their own game. | The use of a common game format helps address barriers to text coding, providing clear motivation in terms of a recognisable end project goal. |
 | Tension: Guidance is needed in order to make changes, but there is potential for learner disengagement if game coding is taught from first principles, especially for younger participants. | Learners start with a half-working minimal game template, which requires only minimal code changes to produce noticeable in-game feedback. |
 | Congruence: Learners interested in art want to create digital artwork to replace placeholder graphics. | An intuitive pixel art editor supports rapid character design, with clear code template signposting to help learners incorporate their artwork. |
-
 | **Category Two – Documentation and Navigation** | |
 | Barrier: Learners take on game genres or features too complex for their current coding ability. | Game type is limited to a single genre; missions are capped in complexity. GDPs are scaffolded to start with low-threshold/high-impact patterns. |
 | Tension: Learners become frustrated when they cannot choose their next feature; facilitator capacity is strained by diverse pathways. | A menu of GDPs enables learners to select additions in a flexible order. This supports autonomy and motivation while keeping complexity manageable. |
 | Tension: Facilitators need to justify learning but may struggle to see it in situ if unfamiliar with game making. Formal skills frameworks can restrict flexibility. | A map of learning dimensions flexibly linked to GDPs and missions helps both learners and facilitators trace progress and identify learning. |
 | Tension: Reflection and documentation are valuable but interrupt creative flow. | Learner progress is traced on an attractive physical map displayed in the learning space, integrating reflection into the making process. |
-
 | **Category Three – Social and cultural barriers** | |
 | Congruence: Designing a game for a real audience is experienced as motivating. | Playtesting within sessions offers short-term motivation; end-of-project showcase events help learners prioritise and reflect on progress. |
 | Barrier: Learners may feel alienated from coding culture or the tools themselves. | Relatable code structures and role-based fictional scenarios help reduce anxiety and encourage engagement through role-play. |
 | Barrier: Participants may avoid written documentation or lack proactive planning skills. | Side missions and extended playtesting time support peer-to-peer sharing, allowing knowledge of GDPs and implementation techniques to circulate informally. |
 
-
 Table 5.2- Table of emerging tensions and design responses
-
 
 My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
 
-**Signposting**
-IS THIS PART ON AGENCY REALLY NEEDED
-At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^45]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
 
 
 This chapter has explored the iterative development of the learning design, focusing on resolving barriers to coding and aligning with existing research principles, particularly the use-modify-create (UMC) process and constructionism. It emphasized the potential and challenges of leveraging professional tools within scaffolded environments, underscoring the pivotal role of learner-led design decisions in motivating coding practices and fostering social collaboration. Two key lines of inquiry which illuminate the cultural and social dimensions of game-making are explored in subsequent chapters. Chapter 7 examines the impact of emerging community processes on participants’ agency, while the Chapter 6 employs video data to describe and analyse the diverse applications of GDPs.
@@ -611,10 +610,6 @@ This chapter has explored the iterative development of the learning design, focu
 
 
 <!-- Instrumental agency can be seen as the base of a hierarchy of agency, in other words, that other dimensions of agency may need to be built on this one. This foundational agentic level is further explored in relation to other research in the following section. -->
-
-
-
-
 
 
 <!-- MOVE OR SUMMARISE
