--- a/_posts/thesis_chapters/2025-7-5-Design_v17.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v17.md
@@ -417,15 +417,11 @@ This section concludes by analysing this area of contradiction. While it focuses
 
 As discussed in Chapter 2, much of the literature on computing game design and programming (CGD&P) emphasises learners’ personal appropriation of programming concepts, often framed through individual progression or mastery. The learning design presented in this section takes a different approach, foregrounding the cultural and affective dimensions of participation. By integrating narrative framing, varied social missions to enhance playful playtesting, and role-based reflection activities, the design created space for learners to engage on their own terms. This broader framing of legitimate participation responds to critiques of overly individualistic orientations in CGD&P and aligns with sociocultural perspectives on learning as relational and situated. Chapter 7 builds on this by analysing how these design features supported the development of learner agency through cultural repertoires, shared roles, and evolving patterns of participation.
 
-In addition to the elements detailed above, other aspects of the learning design also contributed to cultural and affective engagement but are not analysed in depth here. These included:
-
-- A map of learning dimensions (based on Brennan and Resnick [^37]), developed and refined in P4 and P5 to align more explicitly with MakeCode and national computing curricula [^ldim].
-- Reflection activities conducted in role, influenced by Heathcote’s Mantle of the Expert approach [@heathcote_drama_1994].
-- A large-scale visual map to aid navigation, used by learners to trace their movement between GDPs over time [^37b].
-
-These design elements further extended the project’s commitment to inclusive participation, emotional responsiveness, and broader concept-mapping across sessions. While they are not examined in detail in the chapters that follow, the cultural and relational themes they reflect, are taken up more fully in Chapter 7, which explores how participants responded to the broader social and cultural affordances of the design and how these contributed to the development of agency within collective activity.
 
 <!--NOTE:  COMMENT - RETURN TO THIS - MAKE MORE ACTIVE  -->
+Alongside the elements detailed above, several additional features of the learning design contributed to its cultural and affective dimensions, although they are not explored in depth here. A map of learning dimensions, based on the work of Brennan and Resnick [^37], was developed and refined in Phases 4 and 5 to align more explicitly with MakeCode and national computing curricula [^ldim]. Reflection activities were conducted in role, drawing on Heathcote’s Mantle of the Expert approach [@heathcote_drama_1994], which encouraged learners to take perspective and consider purpose within the design process. A large-scale visual map was also introduced to aid navigation, allowing learners to trace and narrate their movement between GDPs over time [^37b]. These features extended the project’s commitment to inclusive and flexible participation, offering learners additional ways to make sense of their progress and to engage with computing concepts in relation to identity, story, and community. While not fully explored in this chapter, they remain important for understanding the broader scope and coherence of the design, and merit attention for a more complete picture of how participation was supported particularly in relation to issues of inclusive participation, emotional responsiveness. While they are not examined in detail in the chapters that follow, the cultural and relational themes they reflect, are taken up more fully in Chapter 7, which explores how participants responded to the broader social and cultural affordances of the design and how these contributed to the development of agency within collective activity.
+
+
 
 <!--
 INTEGRATE ABOVE
